<resources>

    <string name="app_name">IoT Home Ctrl</string>
    <string name="menu_action_settings">Settings</string>

    <!-- Fragment settings -->
    <string name="fragment_settings_title">Widget</string>
    <string name="fragment_settings_permission">Please restart the app and grant the permission</string>

    <string name="control_service_key">control_service_key</string>
    <string name="control_title">On screen control enabled</string>
    <string name="control_summary">Allows to enabling &amp; disabling of on screen widget.</string>

    <string name="vibration_key">vibration_key</string>
    <string name="vibration_title">Vibration enabled</string>
    <string name="vibration_summary">Vibrate when message is send.</string>

    <string name="notification_key">notification_key</string>
    <string name="notification_title">Notifications enabled</string>
    <string name="notification_summary">Show notification when message is send.</string>

    <string name="security_key">security_key</string>
    <string name="security_title">Device identificator</string>
    <string name="security_summary">Unique device indicator on the platform .</string>

    <!-- Widget -->
    <string name="widget_on">ON</string>
    <string name="widget_off">OFF</string>
    <string name="widget_btn_content">widget control</string>

    <!-- Notification -->
    <string name="notificationTitle">Home control service</string>
    <string name="notificationText">Tap to configure.</string>

    <!-- Fragment main -->
    <string name="fragment_main_title">Controls</string>
    <string name="fragment_main_provide_name">Please define the name</string>
    <string name="fragment_main_provide_on_code">Please provide ON code</string>
    <string name="fragment_main_provide_off_code">Please provide OFF code</string>
    <string name="fragment_main_hint_on">Code ON</string>
    <string name="fragment_main_hint_off">Code OFF</string>
    <string name="fragment_main_hint_name">Control name</string>
    <string name="fragment_main_btn_save">Save</string>
    <string name="fragment_main_btn_add">Create</string>
    <string name="fragment_main_update">Update successful</string>
    <string name="fragment_main_controls_title">Existing controls</string>
    <string name="fragment_main_controls_add_title">Create control</string>

    <string name="control_info" formatted="false"><b>%s</b> (%s, %s)</string>
    <string name="control_delete_prompt">Delete %s?</string>
    <string name="control_delete_prompt_yes">Yes</string>

    <!--HomeApiTask-->
    <string name="api_task_uuid_missing">Please provide device identificator.</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="notif_cmd_sent">Command send</string>
    <string name="notif_cmd_fail">Command NOT send!</string>

</resources>
